<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dp_250"
    android:layout_height="@dimen/dp_160">

    <ImageView
        android:id="@+id/im_person"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:src="@drawable/icon_health_check_girl"/>
    <View
        android:id="@+id/view_eye"
        android:layout_width="@dimen/dp_100"
        android:layout_height="@dimen/dp_0_5"
        android:background="@color/colorTheme"
        android:layout_marginTop="@dimen/dp_48"/>
    <TextView
        android:id="@+id/tv_eye"
        android:text="@string/eye"
        style="@style/healthPartsText"
        android:layout_alignBottom="@+id/view_eye"
        android:layout_marginBottom="@dimen/dp_2"
        android:background="@drawable/health_green_full_sp"/>
    <View
        android:id="@+id/view_mouth"
        android:layout_width="@dimen/dp_115"
        android:layout_height="@dimen/dp_0_5"
        android:background="@color/colorTheme"
        android:layout_marginTop="@dimen/dp_70"/>
    <TextView
        android:id="@+id/tv_mouth"
        android:text="@string/mouth"
        style="@style/healthPartsText"
        android:layout_marginBottom="@dimen/dp_2"
        android:layout_alignBottom="@+id/view_mouth"
        android:background="@drawable/health_green_full_sp"/>
    <View
        android:id="@+id/view_hand"
        android:layout_width="@dimen/dp_70"
        android:layout_height="@dimen/dp_0_5"
        android:background="@color/colorTheme"
        android:layout_marginTop="@dimen/dp_105"/>
    <TextView
        android:id="@+id/tv_hand"
        android:text="@string/hand"
        style="@style/healthPartsText"
        android:layout_marginBottom="@dimen/dp_2"
        android:layout_alignBottom="@+id/view_hand"
        android:background="@drawable/health_green_full_sp"/>
    <View
        android:id="@+id/view_buttocks"
        android:layout_width="@dimen/dp_110"
        android:layout_height="@dimen/dp_0_5"
        android:background="@color/colorTheme"
        android:layout_marginTop="@dimen/dp_135"/>
    <TextView
        android:id="@+id/tv_buttock"
        android:text="@string/buttocks"
        style="@style/healthPartsText"
        android:layout_marginBottom="@dimen/dp_2"
        android:layout_alignBottom="@+id/view_buttocks"
        android:background="@drawable/health_green_full_sp"/>
    <View
        android:id="@+id/view_face"
        android:layout_width="@dimen/dp_95"
        android:layout_height="@dimen/dp_0_5"
        android:background="@color/colorTheme"
        android:layout_marginTop="@dimen/dp_55"
        android:layout_alignParentRight="true"/>
    <TextView
        android:id="@+id/tv_face"
        android:text="@string/face"
        style="@style/healthPartsText"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="@dimen/dp_2"
        android:layout_alignBottom="@+id/view_face"
        android:background="@drawable/health_green_full_sp"/>
    <View
        android:id="@+id/view_neck"
        android:layout_width="@dimen/dp_115"
        android:layout_height="@dimen/dp_0_5"
        android:layout_alignParentRight="true"
        android:background="@color/colorTheme"
        android:layout_marginTop="@dimen/dp_85"/>
    <TextView
        android:id="@+id/tv_neck"
        android:text="@string/neck"
        style="@style/healthPartsText"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="@dimen/dp_2"
        android:layout_alignBottom="@+id/view_neck"
        android:background="@drawable/health_green_full_sp"/>
    <View
        android:id="@+id/view_chest"
        android:layout_width="@dimen/dp_115"
        android:layout_height="@dimen/dp_0_5"
        android:background="@color/colorTheme"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/dp_110"/>
    <TextView
        android:id="@+id/tv_chest"
        android:text="@string/chest"
        style="@style/healthPartsText"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="@dimen/dp_2"
        android:layout_alignBottom="@+id/view_chest"
        android:background="@drawable/health_green_full_sp"/>
    <View
        android:id="@+id/view_foot"
        android:layout_width="@dimen/dp_115"
        android:layout_height="@dimen/dp_0_5"
        android:background="@color/colorTheme"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/dp_150"/>
    <TextView
        android:id="@+id/tv_foot"
        android:text="@string/foot"
        style="@style/healthPartsText"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="@dimen/dp_2"
        android:layout_alignBottom="@+id/view_foot"
        android:background="@drawable/health_green_full_sp"/>
    <TextView
        android:id="@+id/tv_general"
        android:text="@string/disease"
        style="@style/healthPartsText"
        android:layout_alignParentRight="true"
        android:background="@drawable/health_green_full_sp"/>
</RelativeLayout>