<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="@dimen/dp_160"
    android:layout_height="wrap_content"
    android:background="@drawable/layout_round5_white_bg">

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45">
        <TextView
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="@dimen/sp_8"
            android:paddingLeft="@dimen/dp_5"
            android:paddingRight="@dimen/dp_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bluetooth_temp_title"
            android:textColor="@color/text_content_color"/>
        <TextView
            android:gravity="center"
            android:textSize="@dimen/sp_6"
            android:paddingLeft="@dimen/dp_5"
            android:paddingRight="@dimen/dp_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_3"
            android:text="@string/bluetooth_temp_subtitle"
            android:textColor="@color/text_content_color"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0_5"
        android:background="@color/divider_color"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_25">
        <TextView
            android:gravity="center"
            android:layout_weight="1"
            android:id="@+id/tv_cancel"
            android:text="@string/cancel"
            android:textSize="@dimen/sp_8"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/colorBlue"/>
        <View
            android:layout_width="@dimen/dp_0_5"
            android:layout_height="match_parent"
            android:background="@color/divider_color"/>
        <TextView
            android:gravity="center"
            android:layout_weight="1"
            android:id="@+id/tv_confirm"
            android:text="@string/confirm"
            android:textSize="@dimen/sp_8"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/colorBlue"/>
    </LinearLayout>

</LinearLayout>