<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rel_top_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_70"
        android:background="@drawable/bg_nav">
        <ImageView
            android:id="@+id/im_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_return"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/sp_15"/>
    </RelativeLayout>

    <TextView
        android:textStyle="bold"
        android:id="@+id/tv_history"
        android:text="@string/history"
        android:textSize="@dimen/sp_12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/rel_top_bar"
        android:textColor="@color/text_content_color"/>

    <LinearLayout
        android:id="@+id/ll_date"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_history"
        android:layout_marginTop="@dimen/sp_10"
        android:layout_marginLeft="@dimen/sp_20"
        android:layout_marginRight="@dimen/sp_20">
        <TextView
            android:gravity="center"
            android:textSize="@dimen/sp_8"
            android:id="@+id/tv_start_time"
            android:layout_width="@dimen/dp_60"
            android:layout_height="@dimen/dp_16"
            android:textColor="@color/colorTheme"
            android:background="@drawable/tv_date_round3_green_bg"/>
        <TextView
            android:text="~"
            android:gravity="center"
            android:textSize="@dimen/sp_12"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/colorTheme"
            android:layout_marginLeft="@dimen/dp_3"
            android:layout_marginRight="@dimen/dp_3"
            android:layout_gravity="center_vertical"/>
        <TextView
            android:gravity="center"
            android:id="@+id/tv_end_time"
            android:textSize="@dimen/sp_8"
            android:layout_width="@dimen/dp_60"
            android:layout_height="@dimen/dp_16"
            android:textColor="@color/colorTheme"
            android:background="@drawable/tv_date_round3_green_bg"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_scan"
        android:layout_alignParentBottom="true"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_below="@+id/ll_date"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dp_5"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginBottom="@dimen/dp_60"
        android:background="@drawable/layout_round5_green_sp">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_30"
            android:background="@drawable/layout_history_tab_sp">
            <LinearLayout
                android:gravity="center"
                android:layout_weight="2"
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent">
                <TextView
                    android:text="@string/type"
                    android:textSize="@dimen/sp_9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/themeWhite"/>
            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:layout_weight="3"
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent">
                <TextView
                    android:text="@string/time"
                    android:textSize="@dimen/sp_9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/themeWhite"/>
            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:layout_weight="2"
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent">
                <TextView
                    android:text="@string/temp"
                    android:textSize="@dimen/sp_9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/themeWhite"/>
            </LinearLayout>
            <LinearLayout
                android:layout_weight="4"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/dp_3"
                android:paddingRight="@dimen/dp_3"
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent">
                <TextView
                    android:textSize="@dimen/sp_9"
                    android:text="@string/guardian"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/themeWhite"/>
            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:layout_weight="3"
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent">
                <TextView
                    android:text="@string/event"
                    android:textSize="@dimen/sp_9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/themeWhite"/>
            </LinearLayout>
        </LinearLayout>
        <com.scwang.smartrefresh.layout.SmartRefreshLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srlEnablePureScrollMode="true"
            app:srlEnableLoadMore="true"
            app:srlDragRate="0.75">
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/history_list_recycler"/>
        </com.scwang.smartrefresh.layout.SmartRefreshLayout>
    </LinearLayout>

</RelativeLayout>