<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg">

    <LinearLayout
        android:id="@+id/ll_info"
        android:orientation="vertical"
        android:layout_width="@dimen/dp_160"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">
        <RelativeLayout
            android:paddingLeft="@dimen/dp_10"
            android:paddingRight="@dimen/dp_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_bg_text">
            <ImageView
                android:id="@+id/im_name"
                android:src="@drawable/login_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"/>
            <EditText
                android:background="@null"
                android:id="@+id/edit_name"
                android:textSize="@dimen/sp_10"
                android:hint="@string/hint_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textColor="@color/colorTheme"
                android:layout_toRightOf="@+id/im_name"
                android:layout_marginLeft="@dimen/dp_10"
                android:textColorHint="@color/colorGray"/>
        </RelativeLayout>

        <RelativeLayout
            android:paddingLeft="@dimen/dp_10"
            android:paddingRight="@dimen/dp_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@drawable/login_bg_text">
            <ImageView
                android:id="@+id/im_psw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/login_password"/>
            <EditText
                android:id="@+id/edit_psw"
                android:background="@null"
                android:hint="@string/hint_psw"
                android:textSize="@dimen/sp_10"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textColor="@color/colorTheme"
                android:layout_toRightOf="@+id/im_psw"
                android:layout_marginLeft="@dimen/dp_10"
                android:textColorHint="@color/colorGray"/>
        </RelativeLayout>

        <Button
            android:gravity="center"
            android:id="@+id/btn_login"
            android:text="@string/login"
            android:textSize="@dimen/sp_11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/themeWhite"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@drawable/login_bg_btn"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_below="@+id/ll_info"
        android:layout_width="@dimen/dp_160"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_10">
        <TextView
            android:id="@+id/tv_region"
            android:text="@string/region"
            android:textSize="@dimen/sp_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTheme"/>
        <ImageView
            android:id="@+id/im_region"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_toRightOf="@+id/tv_region"
            android:background="@drawable/im_login_region_selet"/>
    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/im_flower"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_10"
        android:background="@drawable/login_bg_att"/>
    <ImageView
        android:id="@+id/im_flower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:src="@drawable/login_bg_flower"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginBottom="@dimen/dp_10"/>

</RelativeLayout>