<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="@dimen/dp_220"
    android:layout_height="wrap_content"
    android:background="@color/themeWhite">
    <TextView
        android:gravity="center"
        android:text="@string/date"
        android:textSize="@dimen/sp_8"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_20"
        android:textColor="@color/themeWhite"
        android:background="@color/colorOrange"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!--此部分需要完整复制过去，删减或者更改ID会导致初始化找不到内容而报空-->
        <LinearLayout
            android:id="@+id/timepicker"
            android:minHeight="@dimen/dp_90"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:gravity="center"
            android:orientation="horizontal">

            <com.contrarywind.view.WheelView
                android:id="@+id/year"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <com.contrarywind.view.WheelView

                android:id="@+id/month"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.1" />

            <com.contrarywind.view.WheelView
                android:id="@+id/day"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.1" />

            <com.contrarywind.view.WheelView
                android:id="@+id/hour"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.1" />

            <com.contrarywind.view.WheelView
                android:id="@+id/min"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.1" />

            <com.contrarywind.view.WheelView
                android:id="@+id/second"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.1" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dp_15"
        android:paddingRight="@dimen/dp_15"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_20"
        android:layout_marginBottom="@dimen/dp_10">
        <Button
            android:gravity="center"
            android:layout_weight="1"
            android:id="@+id/btn_cancel"
            android:text="@string/cancel"
            android:textSize="@dimen/dp_8"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/colorOrange"
            android:background="@drawable/date_btn_cancel_bg"/>
        <Button
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/ok"
            android:id="@+id/btn_confirm"
            android:textSize="@dimen/dp_8"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/themeWhite"
            android:layout_marginLeft="@dimen/dp_20"
            android:background="@drawable/date_btn_confirm_bg"/>
    </LinearLayout>
</LinearLayout>